src/test/ui/parser/import-from-path.stderr
error: expected `;`, found `::`
  --> $DIR/import-from-path.rs:14:15
   |
LL | use foo::{bar}::baz
   |               ^^ expected `;`

error: aborting due to previous error

